--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="/style/style.css">
+
     <link rel="stylesheet" href="https://cdn.rawgit.com/twbs/bootstrap/48938155eb24b4ccdde09426066869504c6dab3c/dist/css/bootstrap.min.css">
     <script src="https://maps.googleapis.com/maps/api/js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,700i,800" rel="stylesheet">
+    <link rel="stylesheet" href="style/style.css">
   </head>
   <body>
     <div class="container"></div>
   </body>
-  <script src="/bundle.js"></script>
+  <script src="bundle.js"></script>
 </html>
